--- a/src/main/resources/templates/menu/menuEdit.html
+++ b/src/main/resources/templates/menu/menuEdit.html
@@ -134,7 +134,7 @@
     <div class="form-group">
         <label>현재 이미지</label>
         <br>
-        <img src="{menu.img}" alt="빵 이미지" width="100">
+        <img src="{menu.img}" alt="메뉴 이미지" width="100">
     </div>
 
     <div class="form-group">
