--- a/src/main/resources/templates/menu/menuForCustomer.html
+++ b/src/main/resources/templates/menu/menuForCustomer.html
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar">
-    <div class="navbar-title">🥪 메뉴 상세보기</div>
+    <div class="navbar-title">SAND-IT 메뉴 상세</div>
     <div class="navbar-links">
         <a href="/" class="nav-link">홈</a>
     </div>
