--- a/src/main/resources/templates/menu/cartList.html
+++ b/src/main/resources/templates/menu/cartList.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <link href="/css/menu/cartList.css" rel="stylesheet"> <!-- Thymeleaf 제거 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/menu/cartList.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script src="/js/menu/cartList.js"></script>
+    <link th:href="@{/css/menu/cartList.css}" rel="stylesheet">
 
 </head>
 <body>
