--- a/src/main/resources/templates/menu/cheeseAdmin.html
+++ b/src/main/resources/templates/menu/cheeseAdmin.html
@@ -16,7 +16,7 @@
   <form id="cheeseForm" enctype="multipart/form-data">
     <div class="form-group">
       <label for="cheeseName">치즈 이름</label>
-      <input type="text" id="cheeseName" name="cheeseName" placeholder="빵 이름을 입력하세요" required>
+      <input type="text" id="cheeseName" name="cheeseName" placeholder="치즈 이름을 입력하세요" required>
     </div>
 
     <div class="form-group">
@@ -46,11 +46,10 @@
         <option value="deleted">비활성</option>
       </select>
     </div>
-
-    <div class="form-actions">
-      <button type="button" class="btn" id="submitBtn">등록하기</button>
-      <button type="button" class="btn cancel-btn" onclick="location.href='/cheeses/list'">목록으로 가기</button>
-      <button type="button" class="btn main-btn" onclick="location.href='/admin'">메인으로 가기</button>
+    <div class="button-group">
+      <button type="button" class="btn btn-primary" id="submitBtn">등록하기</button>
+      <button type="button" class="btn btn-secondary" onclick="location.href='/cheeses/list'">목록으로 가기</button>
+      <button type="button" class="btn btn-danger" onclick="location.href='/admin'">메인으로 가기</button>
     </div>
   </form>
 </div>
