--- a/src/main/resources/templates/menu/menuAdmin.html
+++ b/src/main/resources/templates/menu/menuAdmin.html
@@ -69,10 +69,10 @@
         <option value="deleted">품절</option>
     </select><br>
 
-    <div class="form-actions">
-        <button type="submit" class="btn" id="submitBtn">등록하기</button>
-        <button type="button" class="btn cancel-btn" onclick="location.href='/menus/list'">목록으로 가기</button>
-        <button type="button" class="btn main-btn" onclick="location.href='/admin'">메인으로 가기</button>
+    <div class="button-group">
+        <button type="button" class="btn btn-primary" id="submitBtn">등록하기</button>
+        <button type="button" class="btn btn-secondary" onclick="location.href='/menus/list'">목록으로 가기</button>
+        <button type="button" class="btn btn-danger" onclick="location.href='/admin'">메인으로 가기</button>
     </div>
 </form>
 </body>
