--- a/src/main/resources/templates/menu/vegetableAdmin.html
+++ b/src/main/resources/templates/menu/vegetableAdmin.html
@@ -16,7 +16,7 @@
     <form id="vegetableForm" enctype="multipart/form-data">
         <div class="form-group">
             <label for="vegetableName">야채 이름</label>
-            <input type="text" id="vegetableName" name="vegetableName" placeholder="빵 이름을 입력하세요" required>
+            <input type="text" id="vegetableName" name="vegetableName" placeholder="야채 이름을 입력하세요" required>
         </div>
 
         <div class="form-group">
@@ -47,10 +47,10 @@
             </select>
         </div>
 
-        <div class="form-actions">
-            <button type="button" class="btn" id="submitBtn">등록하기</button>
-            <button type="button" class="btn cancel-btn" onclick="location.href='/vegetables/list'">목록으로 가기</button>
-            <button type="button" class="btn main-btn" onclick="location.href='/admin'">메인으로 가기</button>
+        <div class="button-group">
+            <button type="button" class="btn btn-primary" id="submitBtn">등록하기</button>
+            <button type="button" class="btn btn-secondary" onclick="location.href='/vegetables/list'">목록으로 가기</button>
+            <button type="button" class="btn btn-danger" onclick="location.href='/admin'">메인으로 가기</button>
         </div>
     </form>
 </div>
